## ./drv/lib/CMakeLists.txt
# ALL MODULES
add_subdirectory(src/lib_drv)

# SEPARATE MODULES
set(module_list "")
set(module_list_supported "")
set_module_support(module_list module_list_supported ${MCU_NAME} "drv_layer")

if (msdk_adc IN_LIST module_list_supported)
    add_subdirectory(src/lib_drv_analog_in)
endif()
if (msdk_gpio_in IN_LIST module_list_supported)
    add_subdirectory(src/lib_drv_digital_in)
endif()
if (msdk_gpio_out IN_LIST module_list_supported)
    add_subdirectory(src/lib_drv_digital_out)
endif()
if (msdk_gpio_port IN_LIST module_list_supported)
    add_subdirectory(src/lib_drv_i2c_master)
endif()
if (msdk_i2c_master IN_LIST module_list_supported)
    add_subdirectory(src/lib_drv_port)
endif()
if (msdk_pwm IN_LIST module_list_supported)
    add_subdirectory(src/lib_drv_pwm)
endif()
if (msdk_spi_master IN_LIST module_list_supported)
    add_subdirectory(src/lib_drv_spi_master)
endif()
if (msdk_uart IN_LIST module_list_supported)
    add_subdirectory(src/lib_drv_uart)
endif()
if (msdk_onewire IN_LIST module_list_supported)
    add_subdirectory(src/lib_drv_one_wire)
endif()
