# ALL MODULES
add_subdirectory(src/lib_hal)
#  SEPERATE MODULES
add_subdirectory(src/lib_hal_adc)
add_subdirectory(src/lib_hal_gpio)
add_subdirectory(src/lib_hal_i2c_master)
add_subdirectory(src/lib_hal_pwm)
add_subdirectory(src/lib_hal_spi_master)
add_subdirectory(src/lib_hal_uart)
add_subdirectory(src/lib_hal_one_wire)
